--- a/Scripts/SongRequest/UI_Config.json
+++ b/Scripts/SongRequest/UI_Config.json
@@ -216,9 +216,16 @@
     },
     "BrowserDriverExecutableName": {
         "type": "textbox",
-        "value": "chromedriver.exe",
+        "value": "chromedriver",
         "label": "Browser Driver Executable Name",
         "tooltip": "Browser driver executable name in driver path.",
+        "group": "Parsing"
+    },
+    "BrowserDriverWindowsExtension": {
+        "type": "textbox",
+        "value": ".exe",
+        "label": "Browser Driver File Extension",
+        "tooltip": "Browser driver file extension for Windows platform.",
         "group": "Parsing"
     },
     "ElementIdOfNewSongTextField": {
@@ -566,6 +573,20 @@
         "value": "{0}, failed to skip song requests: {1}",
         "label": "Command Skip Song Request Failure Message",
         "tooltip": "The message that will be sent to chat when skip command failed. 0 — user name, 1 — error description.",
+        "group": "Chat Messages"
+    },
+    "AutoInstallOrUpdateBrowserDriverMessage": {
+        "type": "textbox",
+        "value": "Browser driver for {0} version {1} will be installed or updated by script. In case of failure you have to install it by yourself.",
+        "label": "Auto Install Or Update Browser Driver Message",
+        "tooltip": "The message that will be sent to chat when script will try to install or update browser driver. 0 — selected browser, 1 — major version of browser.",
+        "group": "Chat Messages"
+    },
+    "FailedToValidateBrowserDriverMessage": {
+        "type": "textbox",
+        "value": "Failed to validate browser driver for {0}: you have to install it by yourself.",
+        "label": "Browser Driver Validation Failure Message",
+        "tooltip": "The message that will be sent to chat when browser driver validation failed. 0 — selected browser.",
         "group": "Chat Messages"
     },
 
