Feature: second attempt to enable autoinstall (urllib module is unavailable too, need to refactor more)

--- a/Scripts/SongRequest/Scripts.SongRequest.CSharp/Scripts.SongRequest.CSharp/Scripts.SongRequest.CSharp.csproj
+++ b/Scripts/SongRequest/Scripts.SongRequest.CSharp/Scripts.SongRequest.CSharp/Scripts.SongRequest.CSharp.csproj
@@ -17,6 +17,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="WebDriverManager" Version="2.12.2" />
   </ItemGroup>
 
 </Project>
