--- a/Scripts/SongRequest/Scripts.SongRequest.CSharp/Scripts.SongRequest.TestConsoleApp/Scripts.SongRequest.TestConsoleApp.csproj
+++ b/Scripts/SongRequest/Scripts.SongRequest.CSharp/Scripts.SongRequest.TestConsoleApp/Scripts.SongRequest.TestConsoleApp.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Platforms>AnyCPU</Platforms>
     <Configurations>Debug;Release</Configurations>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFrameworks>net472;net5.0</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <LangVersion>9.0</LangVersion>
     <Nullable>enable</Nullable>
